--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+pölöCTYPE html>
 <html>
     <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
@@ -45,21 +45,21 @@
                             <img src="https://picsum.photos/2000/600/?image=958" alt="" uk-cover>
                             <div class="uk-position-center uk-position-small uk-text-center uk-light">
                                 <h2 class="uk-margin-remove">Sairaan</h2>
-                                <p class="uk-margin-remove">upee maailma.</p>
+                                <p class="uk-margin-remove">pölö maailma.</p>
                             </div>
                         </li>
                         <li>
                             <img src="https://picsum.photos/2000/600/?image=1024" alt="" uk-cover>
                             <div class="uk-position-center uk-position-small uk-text-center uk-light">
                                 <h2 class="uk-margin-remove">Vieläkin</h2>
-                                <p class="uk-margin-remove">upee maailma.</p>
+                                <p class="uk-margin-remove">pölö maailma.</p>
                             </div>
                         </li>
                         <li>
                             <img src="https://picsum.photos/2000/600/?image=940" alt="" uk-cover>
                             <div class="uk-position-center uk-position-small uk-text-center uk-light">
                                 <h2 class="uk-margin-remove">Lopullisen</h2>
-                                <p class="uk-margin-remove">upee maailma.</p>
+                                <p class="uk-margin-remove">pölö maailma.</p>
                             </div>
                         </li>
                     </ul>
