--- a/index.html
+++ b/index.html
@@ -12,29 +12,9 @@
 
     <link href="https://fonts.googleapis.com/css?family=K2D:300,700" rel="stylesheet">
 
-
-    <style>
-        html { height: 100%; }
-        body { 
-            min-height: 100%;
-            background-color: #d1e0e0;
-        }
-        * { font-family: 'K2D', sans-serif; }
-        .uk-container + .uk-container {
-            margin-top: 80px; 
-        }
-        h1.uk-heading-primary {
-            margin: 50px;
-        }
-        footer {
-            background-color: rgb(89, 108, 112);
-            color: #fff;
-            margin-top: 80px;
-            padding: 50px 0;
-        }
-    </style>
-
+    <link rel="stylesheet" href="static/css/style.css" />
     </head>
+    
     <body>
         <main>
             <div uk-slideshow="autoplay: true; ratio: 7:2">
